# kaia

./: .gitignore  .gitmodules  README.md  changelog  environment.env.example  pyproject.toml  requirements-brainbox.txt  requirements.eaglesong.core.txt  requirements.eaglesong.full.txt  requirements.infra.txt  requirements.kaia.core.txt  requirements.kaia.txt  requirements.linux.txt  requirements.txt  setup.py
brainbox/release/: container_builder.py  container_runner.py  documentation_handler.py  pyproject.toml  readme_template.md  tox.py  twine.py
brainbox/release/test_container/: test_api.py  test_controllers.py
eaglesong/: README.md  __init__.py  pyproject.toml
eaglesong/core/: automaton.py  primitives.py  translator.py
eaglesong/core/testing/: helping_types.py  scenario.py  testing_interpreter.py
eaglesong/demo/: Part 01 - Eaglesong.ipynb  documentation_handler.py  example_01_echobot.py  example_02_questionnaire.py  example_03_auth_1.py  example_04_auth_2.py  example_05_auth_3.py  example_06_auth_4.py  example_07_menu_1.py  example_08_menu_2.py  example_09_telegram_native.py  example_10_timer_1.py  example_11_timer_2.py  readme_template.md
eaglesong/doc/: common.py  doc_00_intro.md  doc_01_echobot.py  doc_02_questionnaire.py  doc_03_auth_1.py  doc_04_auth_2.py  doc_05_auth_3.py  doc_06_auth_4.py  doc_07_menu_1.py  doc_08_menu_2.py  doc_09_telegram_native.py  doc_10_timer_1.py  doc_11_timer_2.py
eaglesong/drivers/telegram/: __init__.py  menu.py  telegram_driver.py  telegram_interpreters.py  telegram_service.py  telegram_simplifier.py  telegram_translator.py
eaglesong/templates/: __init__.py
eaglesong/templates/templates/: __init__.py  intents_pack.py  template.py  template_base.py  utterance.py  utterance_sequence.py
eaglesong/tests/test_arch/: test_automaton_data_sharing.py
eaglesong/tests/test_core/: test_automaton_protocol.py
eaglesong/tests/test_demo/: common.py  test_01_echobot.py  test_02_questionnaire.py  test_03_06_auth.py  test_07_menu_1.py  test_08_menu_2.py  test_09_telegram_native.py  test_12_13_timer.py
eaglesong/tests/test_demo_skills/: test_01_echobot.py  test_02_questionnaire.py  test_03_06_auth.py  test_07_menu_1.py  test_08_menu_2.py  test_09_telegram_native.py  test_12_13_timer.py
foundation_kaia/: README.md  pyproject.toml
foundation_kaia/brainbox_utils/: __init__.py  brainbox_container_app.py  decorators.py
foundation_kaia/brainbox_utils/models/: __init__.py  installer.py  installing_support.py  model_downloading_support.py  model_loading_support.py  storages.py
foundation_kaia/brainbox_utils/training/: __init__.py  brainbox_logger.py  brainbox_report_item.py  download_file.py  long_brainbox_process.py  subprocess_streaming_call.py
foundation_kaia/doc/: doc_00_fork.py  doc_11_marshalling_files.py  doc_12_marshalling_streaming.py  doc_13_serialization.py  p01_fork.py  p02_marshalling.py  p10_marshalling_basics.py  p13_serialization.py
foundation_kaia/fork/: __init__.py  fork.py  fork_app.py  fork_worker.py
foundation_kaia/logging/: __init__.py  html_log.py  ipywidgets_log.py  log_handlers.py  log_item.py  logger_class.py  logger_definition.py  matplotlib_log.py  pandas_log.py
foundation_kaia/marshalling/: __init__.py  api.py  api_binding.py  api_utils.py  endpoint.py  format.py  marshalling_metadata.py  signature_processor.py  test_api.py
foundation_kaia/marshalling/amenities/: __init__.py  static_files.py  storage.py  storage_api_wrap.py
foundation_kaia/marshalling/documenter/: __init__.py  api_documentation.py  call_documentation.py  endpoint_documentation.py  service_documentation.py
foundation_kaia/marshalling/protocol/: __init__.py
foundation_kaia/marshalling/reflector/: __init__.py  annotation.py  declared_type.py
foundation_kaia/marshalling/serialization/: __init__.py  json_schema.py  json_type.py  serializer.py  tools.py
foundation_kaia/marshalling_2/: __init__.py
foundation_kaia/marshalling_2/amenities/: static_files.py  storage.py  storage_api_wrap.py
foundation_kaia/marshalling_2/documenter/: __init__.py  api_documentation.py  call_documentation.py  endpoint_documentation.py  service_documentation.py
foundation_kaia/marshalling_2/reflector/: annotation_type.py  signature.py
foundation_kaia/mddoc/: __init__.py  code_block.py  doc_block.py
foundation_kaia/misc/: __init__.py  loc.py  pickle_test.py  scheduled_time.py
foundation_kaia/prompters/: __init__.py  abstract_prompter.py  address.py  address_builder.py  jinja_prompter.py  prompter.py  referrer.py  template_parts.py
foundation_kaia/releasing/: __init__.py  md_handler.py  releaser.py
foundation_kaia/releasing/mddoc/: __init__.py  code_block.py  control_value.py  doc_block.py  documentation_handler.py  parse.py  test_runner.py  toc.py
foundation_kaia/tests/: test_doc.py  test_fork.py
foundation_kaia/tests/test_brainbox_utils/: test_long_brainbox_process.py  test_subprocess_streaming_call.py
foundation_kaia/tests/test_logging/: test_headers.py
foundation_kaia/tests/test_marshalling/: annotations_experiments.py  (+3 more)
foundation_kaia/web_utils/: __init__.py  common.py  web_app_entry_point.py
grammatron/: README.md  __init__.py  pyproject.toml
grammatron/doc/: doc_10_templates_and_utterances.py  doc_20_dubs.py  doc_30_grammar.py  doc_31_more_grammar.py  p1_templates_and_utterances.py  p2_dubs.py  p3_grammar.py  p4_parsing.py
grammatron/dubs/: __init__.py
grammatron/globalization/: __init__.py  date_dub.py  language_dispatch_dub.py  month_dub.py  plural_agreement.py  timedelta_dub.py  weekday_dub.py  year_dub.py
grammatron/grammars/: __init__.py  grammar_setter.py
grammatron/templates/: __init__.py  collections.py  template.py  template_base.py  template_parser_base.py  utterance.py  utterance_sequence.py
grammatron/tests/: common.py
phonix/: debug.py  main.py  pyproject.toml
phonix/app/: __init__.py  app.py
phonix/components/: __init__.py  api.py
phonix/daemon/: __init__.py
phonix/server/: __init__.py  file_list.py  service.py
phonix/tests/: test_environment.py
research/nlu/: pyproject.toml
(+3854 files in other folders)
