[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaia-foundation"
description = "Utilities used in Kaia project"
version = "5.1.0"
readme = "README.md"
requires-python = ">=3.10, <4.0"
license = "LGPL-3.0-or-later"

authors = [
    {name = "Yuri Okulovsky", email = "yuri.okulovsky@gmail.com"}
]

dependencies = [
    "requests",
    "jsonpickle",
    "Jinja2",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "websocket-client",
    "python-dotenv",
    "websockets",
    "pyyaml",
    "docutils",
    "cloudpickle"
]


classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
repository = "https://github.com/okulovsky/kaia/tree/main/foundation_kaia"

[project.optional-dependencies]
test = ["sqlalchemy"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["**/*"]
