[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaia-phonix"
description = "Audioservice for avatar, working with pyaudio and porcupine"
version = "4.0.0"
readme = 'README.md'
requires-python = ">=3.10, <4.0"
license = "LGPL-3.0-or-later"

authors = [
    {name = "Yuri Okulovsky", email = "yuri.okulovsky@gmail.com"}
]

dependencies = [
    "yo_fluq",
    "kaia-foundation",
    "kaia-brainbox",
    "kaia-eaglesong",
    "kaia-grammatron",
    "kaia-avatar",
    "pyaudio",
    "plotly",
    "dash",
    "scipy",
    "pvporcupine==1.9.5"
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta"
]

[project.optional-dependencies]
dev = [
    "tox",
    "tox-conda",
    "twine",
]

[project.urls]
repository = "https://github.com/okulovsky/kaia/tree/main/phonix"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
phonix = ["daemon/daemon/files/*", "tests/files/*"]