[project]
name = "pln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.47.0",
    "bokeh>=3.8.0",
    "datasets>=4.0.0",
    "ddgs>=9.5.4",
    "deepspeed>=0.17.2",
    "device-smi>=0.4.1",
    "duckduckgo-search>=8.1.1",
    "evaluate>=0.4.5",
    "faiss-cpu>=1.12.0",
    "flash-attn>=2.8.3",
    "gensim>=4.3.2",
    "gptqmodel>=2.2.0",
    "huggingface-hub>=0.33.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kernels>=0.10.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "logbar>=0.0.4",
    "matplotlib>=3.10.3",
    "mistral-common>=1.8.5",
    "neptune>=1.14.0",
    "nltk>=3.9.1",
    "openai>=1.100.2",
    "openai-harmony>=0.0.4",
    "optimum>=1.27.0",
    "pandas>=2.3.0",
    "peft>=0.17.1",
    "protobuf>=6.31.1",
    "scikit-learn>=1.7.0",
    "scipy==1.12",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.0",
    "smolagents>=1.21.2",
    "subword-nmt>=0.3.8",
    "tiktoken>=0.9.0",
    "tokenicer>=0.0.4",
    "torch>=2.7.1",
    "torchmetrics>=1.7.3",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "trl>=0.20.0",
    "wikipedia>=1.4.0",
]