[project]
name = "kaia-brainbox"
description = "Kitchen assistant with face, voice and personality of your favorite character"
version = "0.0.0"
dependencies = [
    'flask',
]
[[project.authors]]
name = "Yuri Okulovsky"
email = "yuri.okulovsky@gmail.com"

[tool.setuptools]
py-modules = ["brainbox"]
